--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sidwarkd/omega_js.git"
+    "url": "git+https://github.com/JimJamUrCode/omega_mote.git"
   },
   "keywords": [
     "onion",
